# internal/routes/publicroutes.go
@@ -31,6 +31,7 @@ func PublicRoutes(app *fiber.App) {
 	route.Get("/getDMUsers", handlers.GetDMUsers)
 	route.Get("/getDMRole", handlers.GetDMRole)
 	route.Post("/updateUserPreferences", handlers.UpdateUserPreferences)
+	route.Get("/getUserPreferences", handlers.GetUserPreferences)
 	route.Get("/getRuleCatalogs", handlers.GetRuleCatalogs)
 	route.Get("/getRuleNames", handlers.GetRuleNames)
 	route.Get("/getRulesForGroup", handlers.GetRulesForGroup)
